--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -11,10 +11,17 @@
     font-weight: bold;
 }
 
+.product-img-div {
+    height: 128px;
+    width: 128px;
+    overflow: hidden;
+    margin: auto;
+
+
+}
 .product-image {
-    display: block;
-    max-width: 40%;
-    margin: 0 auto;
+    width: 100%;
+    height: 100%;
 }
 
 .product-description {
