Feat: Add slide-in checkout functionality

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -27,3 +27,37 @@
 .test-button:hover {
     background-color: yellow;
 }
+
+#checkoutBox {
+    position: fixed;
+    height: 40vh;
+    background-color: #fff;
+    top: 50;
+    right: 0;
+    z-index: 1;
+    width: 0;
+    transition: width 0.4s;
+    border: 1px solid black;
+    overflow-x: hidden;
+}
+
+
+#checkoutBox.displayCheckout {
+    width: 100vw;
+    padding: 1rem 1rem;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+    #checkoutBox.displayCheckout {
+        height: 30vh;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    #checkoutBox.displayCheckout {
+        height: 40vh;
+        width: 30vw;
+    }
+
+    
+}
