--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -6,7 +6,7 @@
   #hero-banner {
     height: 100vh;
     width: 100vw;
-    background-image: url("hero_image.jpg");
+    background-image: url("hero_image_opt.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -16,7 +16,7 @@
 #earth-section {
     height: 33vh;
     width: 100vw;
-    background-image: url("earth_image.jpg");
+    background-image: url("earth_image_opt.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -25,7 +25,7 @@
 #about-banner {
     height: 33vh;
     width: 100vw;
-    background-image: url("about_image.jpg");
+    background-image: url("about_image_opt.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -34,7 +34,7 @@
 #shop-banner {
     height: 33vh;
     width: 100vw;
-    background-image: url("shop_image.jpg");
+    background-image: url("shop_image_opt.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
